app/oc_website/static/style.css
:root {
  --background-color: #bed9f7;
  --text-color: black;
  --link-text-color: blue;
  --visited-link-text-color: purple;
  --hovered-link-text-color: green;
  --input-background-color: white;
  --input-border-color: rgba(0, 0, 0, 0.3);
  --button-background-color: silver;
  --button-background-color-disabled: dimgrey;
  --button-text-color-disabled: silver;
  --blockquote-border-color: rgba(128, 128, 128, 0.4);
  --blockquote-background-color: rgba(128, 128, 128, 0.1);
}

html {
  font-size: 13pt;
  line-height: 1.3;
}
body {
  overflow-y: scroll;
  background-color: var(--background-color);
  background-image: url("img/blue.jpg");
  background-attachment: fixed;
  background-position: top center;
  background-size: cover;
  color: var(--text-color);
  font-family: "Roboto", sans-serif;
  margin: 1.5rem;
}
main {
  width: 45rem;
  max-width: 100%;
  margin: 0 auto;
  text-align: left;
}

@media (max-width: 600px) {
  html {
    font-size: 11pt;
  }
  body {
    margin: 0;
  }
  #content {
    padding-left: 1rem;
    padding-right: 1rem;
    padding-bottom: 1rem;
  }
}

.clear {
  clear: both;
}

a {
  color: var(--link-text-color);
}
a:not([href]) {
  color: var(--text-color);
}
a:visited {
  color: var(--visited-link-text-color);
}
a:hover {
  color: var(--hovered-link-text-color);
}

#top-header {
  display: flex;
  flex-direction: column;
}
#top-header h1 {
  text-align: center;
  font-family: "UnifrakturCook", cursive;
  margin: 0;
  line-height: 2.5rem;
  font-size: 3.5rem;
}
#top-header h1 a {
  color: var(--text-color);
  text-decoration: none;
}

#top-nav {
  margin: 1.5rem 0;
  background: dimgrey url("img/stone.jpg");
  background-size: cover;
  background-position: center;
}
#top-nav ul {
  margin: 0;
  padding: 0;
  display: flex;
  flex-wrap: wrap;
}
#top-nav ul li {
  display: inline-block;
  flex-grow: 1;
  white-space: nowrap;
}
#top-nav ul li:not(:first-child) {
  margin-left: 0;
}
#top-nav ul li a {
  display: block;
  padding: 0.3rem 0.5rem;
  font-family: "Pirata One", cursive;
  font-size: 1.7rem;
  line-height: 1.5rem;
  text-align: center;
  color: rgba(255, 255, 255, 0.7);
  text-shadow: -1px -1px black, 0 0 0.3rem black;
  text-decoration: none;
  border-top: 3px solid rgba(190, 190, 190, 0.8);
  border-left: 3px solid rgba(190, 190, 190, 0.8);
  border-bottom: 3px solid rgba(0, 0, 0, 0.5);
  border-right: 3px solid rgba(0, 0, 0, 0.5);
}
#top-nav ul li a:focus,
#top-nav ul li a:active {
  border-top: 4px solid rgba(190, 190, 190, 0.8);
  border-left: 4px solid rgba(190, 190, 190, 0.8);
  border-bottom: 2px solid rgba(0, 0, 0, 0.5);
  border-right: 2px solid rgba(0, 0, 0, 0.5);
}

#content h1 {
  font-size: 1.5rem;
}
#content h2 {
  font-size: 1.1rem;
}
#content > *:first-child {
  margin-top: 0;
}
#content > *:last-child {
  margin-bottom: 0;
}

.fancy-title {
  text-align: center;
}

.news {
  margin: 2rem 0;
}
.news .date {
  font-size: 0.85rem;
  text-align: center;
  margin-bottom: 1rem;
  margin-top: -0.75rem;
  opacity: 0.5;
}
.news li {
  margin-bottom: 0.5rem;
}
.news img {
  max-width: 100%;
}

hr {
  width: 100%;
  height: 1px;
  background: var(--text-color);
  border: 0;
}

table {
  width: 100%;
  border-collapse: collapse;
}
table th,
table td {
  padding: 0.2rem 0.5rem;
}

.split {
  display: flex;
}
.split figure {
  width: 50%;
  margin: 0.5rem;
  padding: 0;
  text-align: center;
}

li p,
li ul,
li ol {
  margin: 0 0 0.5rem 0;
}

figure {
  margin: 0;
  text-align: center;
}
figure img {
  width: 75%;
  margin: 0 auto;
}
figure.small img {
  width: 50%;
}
figure figcaption {
  font-style: italic;
}
figure.left {
  float: left;
  margin-right: 1rem;
  width: 25%;
}
figure.left img {
  width: 100%;
}

img.flag {
  box-shadow: 0 0 3px 2px rgba(0, 0, 0, 0.15);
  width: 1.6rem;
  height: 1.1rem;
  vertical-align: bottom;
}

#about h2 small {
  font-weight: normal;
}
#about h2 {
  margin-top: 2rem;
}
#about td.flag {
  padding-right: 0;
}
#about td.name {
  width: 25%;
}
#about td.desc {
  width: 75%;
}

#featured-images #content ul {
  list-style-type: none;
  display: flex;
  margin: 0;
  flex-wrap: wrap;
  padding: 0;
  align-items: center;
  gap: 0.5rem;
}
#featured-images #content li {
  margin: 0;
  padding: 0;
  width: 30%;
  height: 9rem;
  flex-grow: 1;
  text-align: center;
  vertical-align: middle;
}
#featured-images #content li a {
  display: block;
  width: 100%;
  height: 100%;
}
#featured-images #content img {
  outline: 1px solid var(--text-color);
  width: 100%;
  height: 100%;
  object-fit: cover;
}

#home main {
  text-align: center;
}
#home #featured-image {
  display: inline-block;
}
#home #featured-image img {
  display: block;
}
#home #featured {
  margin: 0 auto;
  display: inline-block;
  max-width: 100%;
  max-height: 40rem;
}

#projects #content {
  text-align: center;
}
#projects #content a {
  display: inline-block;
}
#projects #content ul.projects {
  list-style-type: none;
  margin: 1rem 0 2rem 0;
  padding: 0;
}
#projects #content li.project {
  margin: 0 1rem 1rem 0;
  padding: 0;
  display: inline-block;
  text-align: center;
  width: 13rem;
  vertical-align: top;
}
#projects #content .cover {
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
  background-origin: border-box;
  line-height: 0;
  margin-bottom: 0.25rem;
  display: flex;
  align-items: flex-end;
  justify-content: flex-start;
  width: 13rem;
  height: 9rem;
  border-top: 5px solid rgba(255, 255, 255, 0.5);
  border-left: 5px solid rgba(255, 255, 255, 0.5);
  border-bottom: 5px solid rgba(0, 0, 0, 0.5);
  border-right: 5px solid rgba(0, 0, 0, 0.5);
}
#projects ul.languages {
  list-style-type: none;
  margin: 0;
  padding: 0;
}
#projects li.language {
  margin: 0 0 0.25rem 0.25rem;
  padding: 0;
  display: inline-block;
}

#project #project-wrapper {
  display: flex;
}
#project #project-aside {
  text-align: center;
  flex: 1;
  margin-right: 1rem;
}
#project #project-aside img {
  max-width: 100%;
}
#project #project-details {
  flex: 2;
}
#project #project-notes {
  font-size: 0.9rem;
}
#project #project-external-links {
  font-size: 0.9rem;
}
#project #project-external-links ul {
  padding: 0;
  margin: 0;
  list-style-type: none;
}
#project #project-external-links li {
  padding: 0;
  margin: 0;
}
#project #project-synopsis p:first-of-type {
  margin-top: 0;
}
#project ul.languages {
  list-style-type: none;
  margin: 0;
  padding: 0;
}
#project li.language {
  margin: 0 0.5rem 0 0;
  padding: 0;
  display: inline-block;
}

#thread.loading:before {
  content: "Loading comments…";
}

textarea,
input,
button {
  font-family: "Roboto", sans-serif;
  font-size: 1rem;
  box-sizing: border-box;
  padding: 0.3rem 0.5rem;
}

textarea,
input {
  background-color: var(--input-background-color);
  color: var(--text-color);
  outline: 0;
  border: 2px solid var(--input-border-color);
}
button {
  background: var(--button-background-color);
  border: 2px solid var(--input-border-color);
}
button[readonly] {
  background-color: var(--button-background-color-disabled);
  color: var(--button-text-color-disabled);
}

textarea {
  width: 100%;
  min-height: 10rem;
  margin: 0 0 0.25rem 0;
}

textarea:focus,
input:focus {
  border-color: var(--hovered-link-text-color);
}

.release {
  list-style-type: none;
  margin: 0;
  padding: 0;
}
.release li {
  margin: 0 0 2rem 0;
  padding: 0;
}
.release td:first-child {
  width: 1%;
}
.release td {
  vertical-align: top;
}
.release .files {
  list-style-type: none;
  margin: 0;
  padding: 0;
}
.release .files li {
  margin: 0;
  padding: 0;
}
.release .links {
  list-style-type: none;
  margin: 0;
  padding: 0;
}
.release .links li {
  display: inline;
}
.release .links a span {
  display: none;
}
.release .links a img {
  width: 1.25rem;
  height: 1.25rem;
  vertical-align: middle;
  margin-right: 0.5rem;
}

#requests #content hr + ul {
  margin-top: 2rem;
}
#requests #content nav {
  line-height: 2rem;
}
#requests #content ul {
  list-style-type: none;
  margin: 0;
  padding: 0;
}
#requests #content li {
  margin-bottom: 2rem;
}
#requests #content .request {
  display: flex;
}
#requests #content nav label {
  margin-right: 1rem;
}
#requests #content nav button {
  margin-right: 2rem;
}
#requests #content .request p:first-of-type {
  margin-top: 0;
}
#requests #content .image {
  width: 5rem;
  flex-grow: 0;
  flex-shrink: 0;
}
#requests #content .image img {
  max-width: 100%;
  display: block;
}
#requests #content .details {
  margin-left: 0.5rem;
}

#about #friends {
  list-style-type: none;
  margin: 0;
  padding: 0;
  font-size: 0;
}
#about #friends li {
  display: inline-block;
  margin: 0 10px 0 0;
  padding: 0;
}
#about #friends a {
  display: inline-block;
  margin: 0;
  padding: 0;
}

#not-found img {
  max-width: 100%;
}

img[loading="lazy"] {
  background: url("/static/img/small_castle.png") no-repeat center;
}

.pagination {
  margin-top: 2rem;
  text-align: center;
}
.pagination .current,
.pagination a {
  padding: 0 1rem;
}

